examples/test/testpolicy4338.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4338
  namespace: namespace152
spec:
  podSelector:
    matchLabels:
      key12: value40
      key41: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value34
          key6: value48
          key0: value7
      podSelector:
        matchLabels:
          key13: value12
          key26: value37
          key17: value15
